--- a/showcase.html
+++ b/showcase.html
@@ -66,8 +66,9 @@
         <div class="gallery">
             <div class="gallery-item">
                 <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
-                <iframe width="300" height="169" src="https://youtube.com/shorts/mcbf_SVGNbw?feature=share" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+                <video controls width="300">
+                    <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
+                </video>
             <div class="gallery-item">
                 <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
                 <video controls width="300">
