--- a/showcase.html
+++ b/showcase.html
@@ -69,6 +69,7 @@
                 <video controls width="300">
                     <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
                 </video>
+            </div>
             <div class="gallery-item">
                 <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
                 <video controls width="300">
