--- a/showcase.html
+++ b/showcase.html
@@ -66,18 +66,21 @@
         <div class="gallery">
             <div class="gallery-item">
                 <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
+                <a href="https://youtube.com/shorts/mcbf_SVGNbw?feature=share">Bekijk de video op Youtube</a>
                 <video controls width="300">
                     <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="gallery-item">
                 <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
+                <a href="https://youtube.com/shorts/EFRhNkbdlVM?feature=share">Bekijk de video op Youtube</a>
                 <video controls width="300">
                     <source src="How-to-Video-Hoe maak je Croissant Bread Pudding.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="gallery-item">
                 <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
+                <a href="https://youtube.com/shorts/b0oxzI48l84?feature=share">Bekijk de video op Youtube</a>
                 <video controls width="300">
                     <source src="How-to-Video - Broodsticks van Oud Stokbrood.mp4" type="video/mp4">
                 </video>
