--- a/index.html
+++ b/index.html
@@ -24,23 +24,45 @@
     <main class="content">
         <section id="samenvatting">
             <h2>Samenvatting van mijn portfolio</h2>
-            <p>Mijn portfolio bevat twee grote projecten: Simplicare en Klant. Bij Simplicare heb ik vanaf de basis een merk opgebouwd. Ik heb me beziggehouden met marketingstrategieën, de ontwikkeling van een website, het opzetten van sociale media en het creëren van content. Het project Klant was een praktijkgerichte toepassing van de kennis die ik tijdens de minor heb opgedaan. Ik heb advies gegeven en ervaring opgedaan in het analyseren en verbeteren van bestaande campagnes.</p>
-            <p>Deze projecten hebben mijn vaardigheden in online marketing, contentcreatie, en strategieontwikkeling versterkt. Daarnaast hebben ze me geholpen om mijn theoretische kennis praktisch toe te passen.</p>
+            <p>Mijn portfolio bevat twee projecten die echt bepalend zijn geweest voor mijn leerproces tijdens de minor: Simplicare
+                en Project Klant bij Proof Bakery. Beide projecten hebben me geholpen om de theorie die ik tijdens de minor leerde,
+                in de praktijk toe te passen en mijn kennis op het gebied van online marketing en consultancy te vergroten.</p>
+            <p>Bij Simplicare kreeg ik de kans om een merk helemaal vanaf de grond op te bouwen. Het was een ontzettend leerzaam
+                proces waarin ik verantwoordelijk was voor het opzetten van adcampagnes, content creatie en het analyseren van
+                gegenereerde data. Het voelde als een complete ervaring waarbij ik niet alleen mijn creativiteit, maar ook mijn
+                organisatorische en technische vaardigheden moest inzetten. Ik heb niet alleen geleerd hoe ik een merkvisie
+                vormgeef, maar ook hoe ik dit vertaal naar een online strategie die daadwerkelijk resultaten opbrengt.</p>
+            <p>Het project Klant bij Proof Bakery was een waardevolle kans om de kennis die ik in de minor had opgedaan, toe te
+                passen in een echte, werkende omgeving. Hier gaf ik advies over hoe de social media marketing van een bedrijf
+                verbeterd konden worden. Het was een beetje een spiegel voor mijn eigen ideeën en strategieën, en het was goed om te
+                zien hoe de theoretische kennis in de praktijk gebracht kan worden om verbeteringen te realiseren.</p>
         </section>
         
         <section id="inleiding">
             <h2>Inleiding</h2>
             <div class="card">
                 <h3>Motivatie</h3>
-                <p>Mijn motivatie om deze minor te volgen was de wens om mijn kennis over advertenties en social media binnen de e-commerce uit te breiden. Ik wilde meer leren over hoe ik ads effectief kan inzetten om een hogere conversie te bereiken en hoe ik met social media een grotere community kan opbouwen. Deze kennis is van grote waarde voor mijn eigen onderneming, waar ik mijn groei wil versnellen.</p>
+                <p>Mijn keuze om deze minor te volgen kwam voort uit mijn nieuwsgierigheid naar de kracht van online adverteren en
+                    social media in de e-commercewereld. Ik wilde niet alleen leren hoe ik advertenties kan inzetten om de verkoop te
+                    stimuleren, maar ook hoe ik social media kan gebruiken om een grotere community op te bouwen. Ik wist al dat ik met
+                    mijn eigen onderneming een stap verder wilde komen, en deze minor leek voor mij de perfecte gelegenheid om de kennis
+                    en tools te krijgen die ik nodig had om mijn bedrijf echt te laten groeien.</p>
             </div>
             <div class="card">
                 <h3>Relatie tot mijn opleiding</h3>
-                <p>De minor sluit goed aan bij mijn studie Cybersecurity, omdat ik hier ook te maken krijg met development, zoals bij het bouwen en optimaliseren van websites.</p>
+                <p>Mijn studie Cybersecurity heeft me altijd geholpen om een diepgaand begrip te ontwikkelen van de technische kant van
+                    digitale omgevingen, zoals websites en systemen. De minor was een mooie aanvulling, omdat het me liet zien hoe ik
+                    die technische kennis kan combineren met marketingvaardigheden. Het stelde me in staat om zowel de technische als de
+                    commerciële kant van mijn werk beter te begrijpen en samen te brengen. Deze brug tussen technologie en marketing is
+                    essentieel in de moderne online wereld en heeft me geholpen om zowel mijn bedrijf als mijn vaardigheden verder te
+                    ontwikkelen.</p>
             </div>
             <div class="card">
                 <h3>Toekomstperspectief</h3>
-                <p>Voor mijn toekomst als ondernemer in de e-commerce heeft deze minor mij nieuwe inzichten en vaardigheden gegeven. Deze zullen bijdragen aan de groei en professionalisering van mijn onderneming.</p>
+                <p>Wat deze minor mij vooral heeft gebracht, is nieuwe perspectieven en inzichten voor mijn eigen onderneming. Het heeft
+                    me geholpen te begrijpen hoe ik mijn marketingstrategieën kan optimaliseren en hoe ik gerichter klanten kan
+                    bereiken. Het heeft mijn visie over de toekomst van mijn bedrijf veranderd, en ik voel me nu veel beter voorbereid
+                    om verder te groeien als ondernemer in de e-commerce.</p>
             </div>
         </section>
 
@@ -49,22 +71,31 @@
             <div class="card">
                 <h3>Persoonlijke Leervragen</h3>
                 <ul>
-                    <li>Hoe kan ik een Adcampagne opzetten voor social media?</li>
-                    <li>Hoe kan ik SEO beter toepassen?</li>
-                    <li>Hoe kan ik mijn doelgroep beter benaderen?</li>
+                    <li>Hoe kan ik effectieve, geavanceerde adcampagnes opzetten voor social media en deze optimaal targeten?</li>
+                    <li>Hoe pas ik SEO toe om mijn website om content beter zichtbaar te maken voor zoekmachines?</li>
+                    <li>Hoe kan ik mijn doelgroep beter begrijpen en bereiken met de juiste marketingstrategieën?</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Concrete Leerdoelen</h3>
                 <ul>
-                    <li>Aan het einde van de minor wil ik zelfstandig een Adcampagne kunnen opzetten met geavanceerde targetingopties.</li>
-                    <li>Ik wil SEO toepassen op mijn eigen website en weten hoe ik blogs schrijf die geoptimaliseerd zijn voor zoekmachines.</li>
-                    <li>Ik wil mijn doelgroep beter leren begrijpen en effectiever bereiken door middel van data-analyse.</li>
+                    <li>Aan het einde van de minor wil ik in staat zijn om volledig geoptimaliseerde adcampagnes op te zetten met
+                        geavanceerde targetingopties.</li>
+                    <li>Ik wil mijn SEO-vaardigheden verder verbeteren, zodat ik met mijn website en blogs meer organisch verkeer kan
+                        aantrekken.</li>
+                    <li>Ik wil mijn kennis uitbreiden over hoe ik mijn doelgroep nauwkeuriger kan segmenteren en gerichter kan benaderen,
+                        zodat ik marketingcampagnes effectiever kan inzetten.</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Activiteiten binnen de minor</h3>
-                <p>Bij het project Simplicare heb ik voorbeeldcampagnes opgezet en de richtlijnen voor SEO toegepast. Bij het project Klant heb ik de inzichten uit de hoorcolleges gebruikt om blogs te schrijven en campagnes te optimaliseren. De colleges en workshops hebben een belangrijke rol gespeeld bij het verbreden van mijn kennis.</p>
+                <p>Tijdens het Simplicare project had ik de kans om echte adcampagnes op te zetten en SEO-toepassingen te integreren.
+                    Dit project was de ideale omgeving om de theorie in de praktijk te brengen en te testen wat wel en niet werkt. De
+                    lessen en de feedback van docenten en medestudenten speelden dan ook een belangrijke rol in mijn leerproces.</p>
+                <p>Tijdens het project Klant bij Proof Bakery ging ik verder met het verbeteren van mijn SEO-vaardigheden door blogs te
+                    schrijven die geoptimaliseerd waren voor zoekmachines. En heb ik een uitgebreid social media analyse uitgevoerd.
+                    Daarnaast ben ik ook bezig geweest met het creëren van content met behulp van AI wat zeer interessant was. De
+                    hoorcolleges hebben een hiermee ook een belangrijke rol gespeeld bij het verbreden van mijn kennis</p>
             </div>
         </section>
     </main>
