windows size edit

--- a/bewijsmateriaal.html
+++ b/bewijsmateriaal.html
@@ -25,11 +25,15 @@
         <p>Hieronder staan mijn bewijsstukken en prestaties gedurende de minor.</p>
         
         <div class="proof-gallery">
-            <h2>Nulmeting</h2>
-            <p>Toen ik begon met de minor, was mijn kennis van online adverteren en SEO beperkt. Ik had een goed begrip van de
-                basisprincipes van online marketing, maar had weinig ervaring met geavanceerde technieken zoals targetingopties en
-                SEO-optimalisatie. Mijn sterke punten lagen in contentcreatie en het bouwen van websites, maar ik merkte al snel dat
-                er nog veel ruimte was om te groeien op het gebied van online marketingstrategieën.</p>
+            <div class="card">
+                <section id="reflectie">
+                    <h2>Nulmeting</h2>
+                    <p>Toen ik begon met de minor, was mijn kennis van online adverteren en SEO beperkt. Ik had een goed begrip van de
+                        basisprincipes van online marketing, maar had weinig ervaring met geavanceerde technieken zoals targetingopties en
+                        SEO-optimalisatie. Mijn sterke punten lagen in contentcreatie en het bouwen van websites, maar ik merkte al snel dat
+                        er nog veel ruimte was om te groeien op het gebied van online marketingstrategieën.</p>
+                </section>
+                </div>
             <div class="proof-row">
                 <div class="proof-card">
                     <img src="nulmeting-1.png" alt="Bewijsstuk 1 - Nulmeting">
@@ -42,14 +46,18 @@
                 </div>
             </div>
             
-            <h2>Éénmeting</h2>
-            <p>Nu, aan het einde van de minor, heb ik aanzienlijke vooruitgang geboekt.</p>
-            <li>Ik heb geleerd hoe ik effectievere advertenties opzet en hoe ik geavanceerde targetingopties gebruik om de juiste
-                doelgroep te bereiken.</li>
-            <li>Ik ben nu in staat om SEO effectief toe te passen, van het schrijven van geoptimaliseerde blogs tot het verbeteren
-                van de zichtbaarheid van mijn website.</li>
-            <li>Mijn vaardigheden in het maken van visuele content en het schrijven van blogs zijn sterk verbeterd.</li>
-            <li>Ik kan nu de gegevens van mijn campagnes analyseren en de juiste acties ondernemen om ze te verbeteren.</li>
+            <div class="card">
+                <section id="reflectie">
+                    <h2>Éénmeting</h2>
+                    <p>Nu, aan het einde van de minor, heb ik aanzienlijke vooruitgang geboekt.</p>
+                    <li>Ik heb geleerd hoe ik effectievere advertenties opzet en hoe ik geavanceerde targetingopties gebruik om de juiste
+                        doelgroep te bereiken.</li>
+                    <li>Ik ben nu in staat om SEO effectief toe te passen, van het schrijven van geoptimaliseerde blogs tot het verbeteren
+                        van de zichtbaarheid van mijn website.</li>
+                    <li>Mijn vaardigheden in het maken van visuele content en het schrijven van blogs zijn sterk verbeterd.</li>
+                    <li>Ik kan nu de gegevens van mijn campagnes analyseren en de juiste acties ondernemen om ze te verbeteren.</li>
+                </section>
+                </div>
             <div class="proof-row">
                 <div class="proof-card">
                     <img src="eenmeting-1.png" alt="Bewijsstuk 4 - Eenmeting">
@@ -60,9 +68,11 @@
                 <div class="proof-card">
                     <img src="teamrollen-eenmeting.png" alt="Bewijsstuk 6 - Teamrollen-Eenmeting">
                 </div>
-            </div>
-            <h2>PowerBI Dashboard Proof Bakery</h2>
+                <div class="proof-card2">
+                    <h2>PowerBI Dashboard Proof Bakery</h2>
                     <img src="logo-proofbakery-dashboard-powerbi.png" alt="Bewijsstuk 7 - PowerBI">
+                </div>
+                </div>
         </div>
     </main>
 
