--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header class="hero">
         <div class="overlay">
-            <h1>Portfolio Minor</h1>
+            <h1>Minor E-Marketing</h1>
+            <h2>Portfolio Anthony Jankie</h2>
             <p>Een overzicht van mijn persoonlijke en professionele groei</p>
         </div>
     </header>
@@ -23,19 +24,21 @@
     
     <main class="content">
         <section id="samenvatting">
-            <h2>Samenvatting van mijn portfolio</h2>
-            <p>Mijn portfolio bevat twee projecten die echt bepalend zijn geweest voor mijn leerproces tijdens de minor: Simplicare
-                en Project Klant bij Proof Bakery. Beide projecten hebben me geholpen om de theorie die ik tijdens de minor leerde,
-                in de praktijk toe te passen en mijn kennis op het gebied van online marketing en consultancy te vergroten.</p>
-            <p>Bij Simplicare kreeg ik de kans om een merk helemaal vanaf de grond op te bouwen. Het was een ontzettend leerzaam
-                proces waarin ik verantwoordelijk was voor het opzetten van adcampagnes, content creatie en het analyseren van
-                gegenereerde data. Het voelde als een complete ervaring waarbij ik niet alleen mijn creativiteit, maar ook mijn
-                organisatorische en technische vaardigheden moest inzetten. Ik heb niet alleen geleerd hoe ik een merkvisie
-                vormgeef, maar ook hoe ik dit vertaal naar een online strategie die daadwerkelijk resultaten opbrengt.</p>
-            <p>Het project Klant bij Proof Bakery was een waardevolle kans om de kennis die ik in de minor had opgedaan, toe te
-                passen in een echte, werkende omgeving. Hier gaf ik advies over hoe de social media marketing van een bedrijf
-                verbeterd konden worden. Het was een beetje een spiegel voor mijn eigen ideeën en strategieën, en het was goed om te
-                zien hoe de theoretische kennis in de praktijk gebracht kan worden om verbeteringen te realiseren.</p>
+            <div class="card">
+                <h2>Samenvatting van mijn portfolio</h2>
+                <p>Mijn portfolio bevat twee projecten die echt bepalend zijn geweest voor mijn leerproces tijdens de minor: Simplicare
+                    en Project Klant bij Proof Bakery. Beide projecten hebben me geholpen om de theorie die ik tijdens de minor leerde,
+                    in de praktijk toe te passen en mijn kennis op het gebied van online marketing en consultancy te vergroten.</p>
+                <p>Bij Simplicare kreeg ik de kans om een merk helemaal vanaf de grond op te bouwen. Het was een ontzettend leerzaam
+                    proces waarin ik verantwoordelijk was voor het opzetten van adcampagnes, content creatie en het analyseren van
+                    gegenereerde data. Het voelde als een complete ervaring waarbij ik niet alleen mijn creativiteit, maar ook mijn
+                    organisatorische en technische vaardigheden moest inzetten. Ik heb niet alleen geleerd hoe ik een merkvisie
+                    vormgeef, maar ook hoe ik dit vertaal naar een online strategie die daadwerkelijk resultaten opbrengt.</p>
+                <p>Het project Klant bij Proof Bakery was een waardevolle kans om de kennis die ik in de minor had opgedaan, toe te
+                    passen in een echte, werkende omgeving. Hier gaf ik advies over hoe de social media marketing van een bedrijf
+                    verbeterd konden worden. Het was een beetje een spiegel voor mijn eigen ideeën en strategieën, en het was goed om te
+                    zien hoe de theoretische kennis in de praktijk gebracht kan worden om verbeteringen te realiseren.</p>
+            </div>
         </section>
         
         <section id="inleiding">
