--- a/showcase.html
+++ b/showcase.html
@@ -49,61 +49,64 @@
                     onderneming.</p>
             </section>
         </div>
-        <h2>Mijn Showcase</h2>
-        <p>Hier worden de hoogtepunten van de projecten tijdens minor weergegeven.</p>
-        <h3>Project Simplicare</h3>
-        <div class="gallery">
-            <div class="gallery-item">
-                <h4>Het logo dat ik heb gemaakt voor Simplicare</h4>
-                <img src="4.png" alt="Logo Simplicare">
+        <div class="card">
+            <h2>Mijn Showcase</h2>
+            <p>Hier worden de hoogtepunten van de projecten tijdens minor weergegeven.</p>
+            <h3>Project Simplicare</h3>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <h4>Het logo dat ik heb gemaakt voor Simplicare</h4>
+                    <img src="4.png" alt="Logo Simplicare">
+                </div>
+                <div class="gallery-item">
+                    <h4>Prototype van het product dat ik heb gemaakt voor Simplicare</h4>
+                    <img src="Prototype-1.png" alt="Product-prototype Simplicare">
+                </div>
+                <div class="gallery-item">
+                    <h4>AI-model met product dat ik heb gemaakt voor Simplicare</h4>
+                    <img src="content-1.jpg" alt="AI-model Simplicare">
+                </div>
             </div>
-            <div class="gallery-item">
-                <h4>Prototype van het product dat ik heb gemaakt voor Simplicare</h4>
-                <img src="Prototype-1.png" alt="Product-prototype Simplicare">
-            </div>
-            <div class="gallery-item">
-                <h4>AI-model met product dat ik heb gemaakt voor Simplicare</h4>
-                <img src="content-1.jpg" alt="AI-model Simplicare">
-            </div>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <h4>Doelgroep targeting voor instagram ad</h4>
+                    <img src="Doelgroep-target.png" alt="Targeting">
+                </div>
+                <div class="gallery-item">
+                    <h4>Doelgroep bereik dmv plaatsing voor instagram ad</h4>
+                    <img src="Doelgroep-plaatsing-bereik.png" alt="Doelgroep-plaatsing">
+                </div>
+                <div class="gallery-item">
+                    <h4>Resultaten voor instagram ad</h4>
+                    <img src="Advertentie-resultaat.png" alt="Ad-results">
+                </div>
+                </div>
         </div>
-        
-        <div class="gallery">
-            <div class="gallery-item">
-                <h4>Doelgroep targeting voor instagram ad</h4>
-                <img src="Doelgroep-target.png" alt="Targeting">
-            </div>
-            <div class="gallery-item">
-                <h4>Doelgroep bereik dmv plaatsing voor instagram ad</h4>
-                <img src="Doelgroep-plaatsing-bereik.png" alt="Doelgroep-plaatsing">
-            </div>
-            <div class="gallery-item">
-                <h4>Resultaten voor instagram ad</h4>
-                <img src="Advertentie-resultaat.png" alt="Ad-results">
-            </div>
-        </div>
-        <h3>Project Klant</h3>
-        <h4>De AI gegenereerde How-to-Videos die ik heb gemaakt</h4>
-        <div class="gallery">
-            <div class="gallery-item">
-                <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
-                <a href="https://youtube.com/shorts/mcbf_SVGNbw?feature=share">Bekijk de video op Youtube</a>
-                <video controls width="300">
-                    <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="gallery-item">
-                <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
-                <a href="https://youtube.com/shorts/EFRhNkbdlVM?feature=share">Bekijk de video op Youtube</a>
-                <video controls width="300">
-                    <source src="How-to-Video-Hoe maak je Croissant Bread Pudding.mp4" type="video/mp4">
-                </video>
-            </div>
-            <div class="gallery-item">
-                <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
-                <a href="https://youtube.com/shorts/b0oxzI48l84?feature=share">Bekijk de video op Youtube</a>
-                <video controls width="300">
-                    <source src="How-to-Video - Broodsticks van Oud Stokbrood.mp4" type="video/mp4">
-                </video>
+        <div class="card">
+            <h3>Project Klant</h3>
+            <h4>De AI gegenereerde How-to-Videos die ik heb gemaakt</h4>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <h4>How-to-Video - Oud Brood omtoveren tot Overheerlijke Croutons</h4>
+                    <a href="https://youtube.com/shorts/mcbf_SVGNbw?feature=share">Bekijk de video op Youtube</a>
+                    <video controls width="300">
+                        <source src="How-to-Video - Oud Brood omtoveren tot Overheerlijke Crout.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <h4>How-to-Video - Hoe maak je Crossaint Bread Pudding</h4>
+                    <a href="https://youtube.com/shorts/EFRhNkbdlVM?feature=share">Bekijk de video op Youtube</a>
+                    <video controls width="300">
+                        <source src="How-to-Video-Hoe maak je Croissant Bread Pudding.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <h4>How-to-Video - Broodsticks van Oud Stokbrood</h4>
+                    <a href="https://youtube.com/shorts/b0oxzI48l84?feature=share">Bekijk de video op Youtube</a>
+                    <video controls width="300">
+                        <source src="How-to-Video - Broodsticks van Oud Stokbrood.mp4" type="video/mp4">
+                    </video>
+                </div>
             </div>
         </div>
     </main>
